--- a/package.json
+++ b/package.json
@@ -2,7 +2,10 @@
   "name": "ps-redux",
   "description": "React and Redux Pluralsight course by Cory House",
   "scripts": {
-    "start:dev": "title %scriptKey_20210217_0853% && webpack-dev-server --config webpack.config.dev.js"
+    "start-DONT-USE": "run-p start:dev start:api",
+    "start:dev": "title %scriptKey_20210217_0853% && webpack-dev-server --config webpack.config.dev.js",
+    "prestart:api": "node tools/createMockdb.js",
+    "start:api": "title %scriptKey_20210218_0648% && node tools/apiServer.js  "
   },
   "dependencies": {
     "bootstrap": "4.3.1",
