--- a/package.json
+++ b/package.json
@@ -5,7 +5,14 @@
     "start-DONT-USE": "run-p start:dev start:api",
     "start:dev": "title %scriptKey_20210217_0853% && webpack-dev-server --config webpack.config.dev.js",
     "prestart:api": "node tools/createMockdb.js",
-    "start:api": "title %scriptKey_20210218_0648% && node tools/apiServer.js  "
+    "start:api": "title %scriptKey_20210218_0648% && node tools/apiServer.js  ",
+    "test": "title %scriptKey_20210219_0525% && jest --watch"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/tools/fileMock.js",
+      "\\.(css|less)$": "<rootDir>/tools/styleMock.js"
+    }
   },
   "dependencies": {
     "bootstrap": "4.3.1",
