--- a/package.json
+++ b/package.json
@@ -25,37 +25,43 @@
   },
   "dependencies": {
     "bootstrap": "4.3.1",
-    "immer": "2.1.3",
+    "immer": "^9.0.12",
     "prop-types": "15.7.2",
     "react": "16.8.4",
     "react-dom": "16.8.4",
-    "react-redux": "6.0.1",
-    "react-router-dom": "5.0.0",
-    "react-toastify": "4.5.2",
-    "redux": "4.0.1",
-    "redux-thunk": "2.3.0",
+    "react-redux": "^8.0.1",
+    "react-router-dom": "^6.3.0",
+    "react-toastify": "^8.2.0",
+    "redux": "^4.2.0",
+    "redux-thunk": "^2.4.1",
     "reselect": "4.0.0"
   },
+  "deprecated": {
+    "eslint-parser": "@babel/eslint-parser",
+    "eslint-loader": "eslint-webpack-plugin"
+  },
   "devDependencies": {
-    "@babel/core": "7.3.4",
-    "babel-eslint": "10.0.1",
-    "babel-loader": "8.0.5",
-    "babel-preset-react-app": "7.0.2",
+    "@babel/core": "^7.17.9",
+    "@babel/eslint-parser": "^7.17.0",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/preset-react": "^7.16.7",
+    "babel-loader": "^8.2.5",
+    "babel-preset-react-app": "^10.0.1",
     "css-loader": "2.1.1",
-    "cssnano": "4.1.10",
+    "cssnano": "^5.1.7",
     "enzyme": "3.9.0",
     "enzyme-adapter-react-16": "1.11.2",
-    "eslint": "5.15.2",
-    "eslint-loader": "2.1.2",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-react": "7.12.4",
+    "eslint": "^8.14.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-webpack-plugin": "^3.1.1",
     "fetch-mock": "7.3.1",
-    "html-webpack-plugin": "3.2.0",
-    "http-server": "0.9.0",
-    "jest": "24.5.0",
-    "json-server": "0.14.2",
+    "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.0",
+    "jest": "^28.0.2",
+    "json-server": "^0.17.0",
     "mini-css-extract-plugin": "0.5.0",
-    "node-fetch": "^2.3.0",
+    "node-fetch": "^2.6.7",
     "npm-run-all": "4.1.5",
     "postcss-loader": "3.0.0",
     "react-test-renderer": "16.8.4",
@@ -64,10 +70,10 @@
     "redux-mock-store": "1.5.3",
     "rimraf": "2.6.3",
     "style-loader": "0.23.1",
-    "webpack": "4.29.6",
-    "webpack-bundle-analyzer": "3.1.0",
-    "webpack-cli": "3.3.0",
-    "webpack-dev-server": "3.2.1"
+    "webpack": "^5.72.0",
+    "webpack-bundle-analyzer": "^4.5.0",
+    "webpack-cli": "^4.9.2",
+    "webpack-dev-server": "^4.8.1"
   },
   "engines": {
     "node": ">=8"
@@ -84,7 +90,7 @@
       "plugin:import/errors",
       "plugin:import/warnings"
     ],
-    "parser": "babel-eslint",
+    "parser": "@babel/eslint-parser",
     "parserOptions": {
       "ecmaVersion": 2018,
       "sourceType": "module",
@@ -110,5 +116,6 @@
       }
     },
     "root": false
-  }
+  },
+  "eslintConfig_parser___WAS_20220428_1036": "babel-eslint"
 }
