--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "start-DONT-USE": "run-p start:dev start:api",
     "start:dev": "title %scriptKey_20210217_0853% && webpack-dev-server --config webpack.config.dev.js",
-    "prestart:api": "node ./tools/createMockdb.js",
+    "prestart:api": "node ./tools/createMockDb.js",
     "start:api": "title %scriptKey_20210218_0648% && node tools/apiServer.js  ",
     "test": "title %scriptKey_20210219_0525% && jest --watch",
     "test:CI": "jest",
