--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clean:build": "rimraf ./build && mkdir build",
     "prebuild_HOLD": "run-p clean:build test:CI",
     "build": "webpack --openssl-legacy-provider --config webpack.config.prod.js",
-    "postbuild": "run-p start:api_ForGitHub_action serve:build",
+    "postbuild_onLocalOnly": "run-p start:api_ForGitHub_action serve:build",
+    "postbuild": "run-p start:api_ForGitHub_action",
     "serve:build": "http-server ./build"
   },
   "jest": {
