--- a/.github/workflows/main_ps-204-building-applications-with-react-and-redux.yml
+++ b/.github/workflows/main_ps-204-building-applications-with-react-and-redux.yml
@@ -1,56 +1,30 @@
-# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
-# More GitHub Actions for Azure: https://github.com/Azure/actions
+# File: .github/workflows/workflow.yml
+# 04/28/2022 06:67 pm - SSN
+# Source: https://github.com/Azure/webapps-deploy
 
-name: Build and deploy Node.js app to Azure Web App - PS-204-Building-Applications-with-React-and-Redux
+on: push
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: windows-latest
-
+  build-and-deploy:
+    runs-on: windows-2016
     steps:
-      - uses: actions/checkout@v2
+    # checkout the repo
+    - name: 'Checkout Github Action' 
+      uses: actions/checkout@master
 
-      - name: Set up Node.js version
-        uses: actions/setup-node@v1
-        with:
-          node-version: '14.x'
+    - name: Setup Node 14.x
+      uses: actions/setup-node@v1
+      with:
+        node-version: '14.x'
+    - name: 'npm install, build, and test'
+      run: |
+        npm install
+        npm run build --if-present
+        npm run test --if-present
 
-      - name: npm install, build, and test
-        run: |
-          npm install
-          npm run build --if-present
-         # npm run test --if-present
-      
-      - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
-        with:
-          name: node-app
-          path: .
-
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    environment:
-      name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
-
-    steps:
-      - name: Download artifact from build job
-        uses: actions/download-artifact@v2
-        with:
-          name: node-app
-
-      - name: 'Deploy to Azure Web App'
-        uses: azure/webapps-deploy@v2
-        id: deploy-to-webapp
-        with:
-          app-name: 'PS-204-Building-Applications-with-React-and-Redux'
-          slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_CD206A85A8CE4C49B8CF49C813F966CF }}
-          package: .
+    - name: 'Run Azure webapp deploy action using publish profile credentials'
+      uses: azure/webapps-deploy@v2
+      with:
+        app-name: node-rn
+        publish-profile: ${{ secrets.secret1 }}
