--- a/.github/workflows/main_ps-204-building-applications-with-react-and-redux.yml
+++ b/.github/workflows/main_ps-204-building-applications-with-react-and-redux.yml
@@ -8,28 +8,43 @@ on:
       - main
 
 
-
+# https://docs.microsoft.com/en-us/azure/app-service/deploy-github-actions?tabs=applevel#set-up-the-environment
+# 1
 jobs:
   build-and-deploy:
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
     # checkout the repo
     - name: 'Checkout Github Action' 
       uses: actions/checkout@v2
 
+
     - name: Setup Node 14.x
       uses: actions/setup-node@v1
       with:
         node-version: '14.x'
+
+
+
+
+
+# https://docs.microsoft.com/en-us/azure/app-service/deploy-github-actions?tabs=applevel#build-the-web-app
     - name: 'npm install, build, and test'
       run: |
         npm install
         npm run build --if-present
         npm run test --if-present
 
+# working-directory: dir if not in the root
+
+
+
     - name: 'Run Azure webapp deploy action using publish profile credentials'
+# https://docs.microsoft.com/en-us/azure/app-service/deploy-github-actions?tabs=applevel#configure-the-github-secret    
+# https://docs.microsoft.com/en-us/azure/app-service/deploy-github-actions?tabs=applevel#javascript
       uses: azure/webapps-deploy@v2
       with:
         app-name: 'PS-204-Building-Applications-with-React-and-Redux'
         slot-name: 'Production'
         publish-profile: ${{ secrets.secret1 }}
+# package: if not in the root
