--- a/.github/workflows/main_ps-204-building-applications-with-react-and-redux.yml
+++ b/.github/workflows/main_ps-204-building-applications-with-react-and-redux.yml
@@ -15,7 +15,7 @@ on:
 # 1
 jobs:
   build-and-deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     steps:
     # checkout the repo
     - name: 'Checkout Github Action' 
