--- a/package.json
+++ b/package.json
@@ -34,8 +34,7 @@
     "react-toastify": "4.5.2",
     "redux": "4.0.1",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0",
-    "http-server": "^0.9.0"
+    "reselect": "4.0.0"
   },
   "devDependencies": {
     "@babel/core": "7.3.4",
