Copy tools under build.

--- a/.github/workflows/main_ps-204-building-applications-with-react-and-redux.yml
+++ b/.github/workflows/main_ps-204-building-applications-with-react-and-redux.yml
@@ -40,7 +40,7 @@ jobs:
 
          # working-directory: 'build'
 
-
+        xcopy /y tools\ build\tools\
 
     - name: 'Run Azure webapp deploy action using publish profile credentials'
 # https://docs.microsoft.com/en-us/azure/app-service/deploy-github-actions?tabs=applevel#configure-the-github-secret    
