--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test:CI": "jest",
     "clean:build": "rimraf ./build && mkdir build",
     "prebuild_HOLD": "run-p clean:build test:CI",
-    "build": "webpack --openssl-legacy-provider --config webpack.config.prod.js",
+    "build": "webpack --config webpack.config.prod.js",
     "postbuild_onLocalOnly": "run-p start:api_ForGitHub_action serve:build",
     "serve:build": "http-server ./build"
   },
