Deploy same package to both web and api sites.

--- a/.github/workflows/main_ps-204-building-applications-with-react-and-redux.yml
+++ b/.github/workflows/main_ps-204-building-applications-with-react-and-redux.yml
@@ -40,7 +40,7 @@ jobs:
 
          # working-directory: 'build'
 
-#        xcopy /y tools\ build\tools\
+        xcopy /y tools\ build\tools\
 
     - name: 'Run Azure webapp deploy action using publish profile credentials - WEB'
 # https://docs.microsoft.com/en-us/azure/app-service/deploy-github-actions?tabs=applevel#configure-the-github-secret    
@@ -60,4 +60,4 @@ jobs:
         app-name: 'PS-204-Building-Applications-with-React-and-Redux-API'
 #        slot-name: 'Production'
         publish-profile: ${{ secrets.secret2 }}
-        package: 'tools'
+        package: 'build'
