--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "clean:build": "rimraf ./build && mkdir build",
     "prebuild_HOLD": "run-p clean:build test:CI",
     "build": "webpack --config webpack.config.prod.js",
-    "postbuild_onLocalOnly": "run-p start:api:prod serve:build",
+    "build:local": "webpack --config webpack.config.prod.js",
+    "postbuild:local": "run-p start:api:prod serve:build",
     "serve:build": "http-server ./build"
   },
   "jest": {
@@ -68,7 +69,8 @@
     "webpack": "4.29.6",
     "webpack-bundle-analyzer": "3.1.0",
     "webpack-cli": "3.3.0",
-    "webpack-dev-server": "3.2.1"
+    "webpack-dev-server": "3.2.1",
+    "webpack-merge": "^5.8.0"
   },
   "engines": {
     "node": ">=8"
