Use Linux command for copy!

--- a/.github/workflows/main_ps-204-building-applications-with-react-and-redux-api.yml
+++ b/.github/workflows/main_ps-204-building-applications-with-react-and-redux-api.yml
@@ -27,7 +27,7 @@ jobs:
           #npm run build --if-present
           #npm run test --if-present
             
-          cp  tools/. tools_prod
+          cp -r tools/. tools_prod
 
           cp  package.json tools_prod
 
