Drop package.json from API.

--- a/.github/workflows/main_ps-204-building-applications-with-react-and-redux-api.yml
+++ b/.github/workflows/main_ps-204-building-applications-with-react-and-redux-api.yml
@@ -29,7 +29,7 @@ jobs:
             
           cp -r tools/. tools_prod
 
-          cp  package.json tools_prod
+          #cp  package.json tools_prod
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
