--- a/.github/workflows/main_ps-204-building-applications-with-react-and-redux-api.yml
+++ b/.github/workflows/main_ps-204-building-applications-with-react-and-redux-api.yml
@@ -26,10 +26,11 @@ jobs:
           #npm install
           #npm run build --if-present
           #npm run test --if-present
-            
+          cd tools_prod
+          npm install
+          cd ..
           cp -r tools/. tools_prod
 
-          #cp  package.json tools_prod
 
       - name: Upload artifact for deployment job
         uses: actions/upload-artifact@v2
