--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start:dev": "title %scriptKey_20210217_0853% && webpack-dev-server --config webpack.config.dev.js",
     "prestart:api": "node ./tools/createMockDb.js",
     "start:api": "title %scriptKey_20210218_0648% && node tools/apiServer.js  ",
-    "start:api:prod": "node apiServer.js  ",
+    "start:api:prod": "node tools/apiServer.js  ",
     "test:localONLY": "title %scriptKey_20210219_0525% && jest --watch",
     "test:CI": "jest",
     "clean:build": "rimraf ./build && mkdir build",
@@ -43,7 +43,7 @@
     "babel-eslint": "10.0.1",
     "babel-loader": "8.0.5",
     "babel-preset-react-app": "7.0.2",
-    "copy-webpack-plugin": "^10.2.4",
+    "copy-webpack-plugin": "4.5.0",
     "css-loader": "2.1.1",
     "cssnano": "4.1.10",
     "enzyme": "3.9.0",
